--- a/android/libraries/SocialNetLib/.classpath
+++ b/android/libraries/SocialNetLib/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="C:/Users/Jason/Downloads/twitter4j-3.0.3/lib/twitter4j-core-3.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jason/Downloads/twitter4j-3.0.3/lib/twitter4j-media-support-3.0.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
