Fixing proguard issues

--- a/android/client/proguard.cfg
+++ b/android/client/proguard.cfg
@@ -2,6 +2,8 @@
 -injars      libs
 -outjars     bin/classes-processed.jar
 -libraryjars /Users/chrislacy/android-sdk-macosx/platforms/android-14/android.jar
+#-libraryjars ../../../../../../adt-bundle-windows-x86_64/sdk/platforms/android-14/android.jar
+
 
 -dontpreverify
 -repackageclasses ''
@@ -20,7 +22,6 @@
 -keep class org.** { *; }
 -keep class org.tjson.** { *; }
 -keep class org.tweetalib.** { *; }
--keep class org.twitter4j.** { *; }
 -keep class twitter4j.** { *; }
 
 -keep public class * extends android.view.View {
@@ -52,3 +53,9 @@
 }
 
 -dontwarn android.support.**
+-dontwarn javax.language.management.**
+-dontwarn java.lang.management.**
+-dontwarn javax.management.**
+-dontwarn org.apache.log4j.**
+-dontwarn org.slf4j.**
+-dontwarn org.apache.commons.logging.**
