--- a/android/client/proguard.cfg.properties
+++ b/android/client/proguard.cfg.properties
@@ -2,6 +2,7 @@
 -injars      libs
 -outjars     bin/classes-processed.jar
 -libraryjars /usr/local/java/android-sdk/platforms/android-14/android.jar
+#-libraryjars ../../../../../../adt-bundle-windows-x86_64/sdk/platforms/android-14/android.jar
 
 -dontpreverify
 -repackageclasses ''
