--- a/android/libraries/SocialNetLib/.classpath
+++ b/android/libraries/SocialNetLib/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="libs/twitter4j-media-support-3.0.3.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
