Adding more .idea files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,16 @@
-android/client/bin/
-android/client/gen/
-android/client/out/
-android/samples/SocialNetLib/bin/
-android/samples/SocialNetLib/gen/
-android/libraries/SupportLibraryV4/bin/
-android/libraries/SupportLibraryV4/gen/
-android/client/proguard/
-android/client/proguard_logs/
+bin
+gen
+out
+proguard
+proguard_logs
 .DS_Store
 R.java
 .metadata/
 *.pyc
-bin/
 .classpath
 .project
 .settings
 tests
 *.apk
+*/.idea/workspace.xml
+*/.idea/tasks.xml
