--- a/android/client/proguard.cfg
+++ b/android/client/proguard.cfg
@@ -1,5 +1,5 @@
 -injars      bin/classes
--injars      libs
+#-injars      libs
 -outjars     bin/classes-processed.jar
 #-libraryjars /Users/chrislacy/android-sdk-macosx/platforms/android-14/android.jar
 -libraryjars ../../../../../../adt-bundle-windows-x86_64/sdk/platforms/android-14/android.jar
@@ -23,6 +23,7 @@
 -keep class org.tjson.** { *; }
 -keep class org.tweetalib.** { *; }
 -keep class twitter4j.** { *; }
+-keep class com.google.android.apps.dashclock.** { *; }
 
 -keep public class * extends android.view.View {
     public <init>(android.content.Context);
@@ -59,3 +60,4 @@
 -dontwarn org.apache.log4j.**
 -dontwarn org.slf4j.**
 -dontwarn org.apache.commons.logging.**
+-dontwarn com.google.android.apps.dashclock.**
