--- a/android/clientbeta/AndroidManifest.xml
+++ b/android/clientbeta/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tweetlanes.android.beta"
-    android:versionCode="48"
-    android:versionName="1.1.2">
+    android:versionCode="1"
+    android:versionName="1.1.3_b1">
 
     <uses-sdk android:targetSdkVersion="17"
         android:minSdkVersion="14" />
