--- a/android/libraries/SocialNetLib/.classpath
+++ b/android/libraries/SocialNetLib/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/twitter4j-core-3.0.3.jar"/>
-	<classpathentry kind="lib" path="libs/twitter4j-media-support-3.0.3.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-core-3.0.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-media-support-3.0.4-SNAPSHOT.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
