Changed "ChangeLog" and Version properties

--- a/android/client/project.properties
+++ b/android/client/project.properties
@@ -8,8 +8,9 @@
 # project structure.
 
 # Project target.
-target=android-17
+target=Google Inc.:Google APIs:17
 
 proguard.config=proguard.cfg
 android.library.reference.1=../libraries/TweetLanesCore
+
 
