--- a/android/libraries/TweetLanesCore/project.properties
+++ b/android/libraries/TweetLanesCore/project.properties
@@ -12,5 +12,5 @@
 
 android.library=true
 # Project target.
-target=android-17
+target=Google Inc.:Google APIs:17
 android.library.reference.1=../SocialNetLib
