--- a/android/clientbeta/project.properties
+++ b/android/clientbeta/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-target=Google Inc.:Google APIs:17
+target=android-17
 
 proguard.config=proguard.cfg
 android.library.reference.1=../libraries/TweetLanesCore
