--- a/android/client/AndroidManifest.xml
+++ b/android/client/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tweetlanes.android"
     android:versionCode="51"
-    android:versionName="1.2.1_b0">
+    android:versionName="1.2.1">
 
     <uses-sdk android:targetSdkVersion="17"
         android:minSdkVersion="14" />
