--- a/android/client/AndroidManifest.xml
+++ b/android/client/AndroidManifest.xml
@@ -19,11 +19,11 @@
         android:label="@string/app_launcher_name"
         android:theme="@android:style/Theme.NoTitleBar"
         android:icon="@drawable/ic_launcher"
-    	android:name=".core.App"
+    	android:name="com.tweetlanes.android.core.App"
          >
 
         <activity
-            android:name=".core.view.BootActivity"
+            android:name="com.tweetlanes.android.core.view.BootActivity"
             >
             <intent-filter android:label="@string/app_launcher_name">
                 <action android:name="android.intent.action.MAIN" />
@@ -104,7 +104,7 @@
         </activity>
 
         <activity
-            android:name=".core.view.NewAccountActivity"
+            android:name="com.tweetlanes.android.core.view.NewAccountActivity"
             >
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -114,7 +114,7 @@
         </activity>
 
 
-        <activity android:name=".core.view.HomeActivity"
+        <activity android:name="com.tweetlanes.android.core.view.HomeActivity"
                   android:launchMode="singleTop"
             >
 
@@ -127,7 +127,7 @@
         </activity>
 
         <activity
-            android:name=".core.view.ProfileActivity"
+            android:name="com.tweetlanes.android.core.view.ProfileActivity"
             android:windowSoftInputMode="stateUnchanged"
 			 >
             <intent-filter>
@@ -138,7 +138,7 @@
         </activity>
 
         <activity
-            android:name=".core.view.SearchActivity"
+            android:name="com.tweetlanes.android.core.view.SearchActivity"
             >
             <intent-filter>
 			    <category android:name="android.intent.category.DEFAULT" />
@@ -148,13 +148,13 @@
         </activity>
 
         <activity
-            android:name=".core.view.TweetSpotlightActivity"
+            android:name="com.tweetlanes.android.core.view.TweetSpotlightActivity"
             android:label="@string/app_tweet_spotlight_activity_name"
             >
         </activity>
 
         <activity
-            android:name=".core.view.ImageViewActivity"
+            android:name="com.tweetlanes.android.core.view.ImageViewActivity"
             android:theme="@android:style/Theme.Holo"
             >
             <intent-filter>
@@ -165,23 +165,23 @@
         </activity>
 
         <activity
-            android:name=".core.view.TutorialActivity"
+            android:name="com.tweetlanes.android.core.view.TutorialActivity"
             android:theme="@style/Theme.TweetLanes.Light"
             android:label="@string/tutorial_title"
             >
         </activity>
 
         <activity
-            android:name=".core.view.DirectMessageActivity"
+            android:name="com.tweetlanes.android.core.view.DirectMessageActivity"
             android:theme="@style/Theme.TweetLanes.Light"
             >
         </activity>
 
-         <activity android:name=".core.view.SettingsActivity"
+         <activity android:name="com.tweetlanes.android.core.view.SettingsActivity"
                 android:label="@string/title_settings">
         </activity>
 
-         <activity android:name=".core.view.TwitterAuthActivity"
+         <activity android:name="com.tweetlanes.android.core.view.TwitterAuthActivity"
              android:theme="@style/Theme.TweetLanes.Light"
              android:noHistory="true">
 			<intent-filter>
@@ -192,7 +192,7 @@
 			</intent-filter>
 		</activity>
 
-         <activity android:name=".core.view.AppDotNetAuthActivity"
+         <activity android:name="com.tweetlanes.android.core.view.AppDotNetAuthActivity"
              android:theme="@style/Theme.TweetLanes.Light"
              android:noHistory="true">
 			<intent-filter>
@@ -203,8 +203,8 @@
 			</intent-filter>
 		</activity>
 
-        <receiver android:name=".core.view.AlarmReceiver" />
-        <receiver android:name=".core.view.DeleteNotificationsReceiver" />
+        <receiver android:name="com.tweetlanes.android.core.view.AlarmReceiver" />
+        <receiver android:name="com.tweetlanes.android.core.view.DeleteNotificationsReceiver" />
 
         <receiver
                 android:name="com.tweetlanes.android.core.view.DeviceBootReciever"
@@ -217,7 +217,7 @@
         </receiver>
 
          <service
-            android:name=".core.dashclock.TweetLanesExtension"
+            android:name="com.tweetlanes.android.core.dashclock.TweetLanesExtension"
             android:label="@string/extension_title"
             android:permission="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA" >
             <intent-filter>
