--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ R.java
 .settings
 tests
 *.apk
-*/.idea/workspace.xml
-*/.idea/tasks.xml
+*/.idea
 android/client/.idea/workspace.xml
 android/clientbeta/.idea/workspace.xml
