--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 18
+    compileSdkVersion 27
     buildToolsVersion "26.0.2"
+    useLibrary  'org.apache.http.legacy'
 
     defaultConfig {
         minSdkVersion 14
