--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:name="com.tweetlanes.android.core.App"
         >
 
