--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
     <application
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar"
-        android:icon="@mipmap/ic_launcher"
-        android:name="com.tweetlanes.android.core.App"
-        >
+        android:icon="@drawable/ic_logo"
+        android:name="com.tweetlanes.android.core.App">
 
         <activity
             android:name="com.tweetlanes.android.core.view.BootActivity"
-            >
+            android:icon="@mipmap/ic_launcher">
+
             <intent-filter android:label="@string/app_launcher_name">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
