--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     implementation files('libs/basic-http-client-android-0.88.jar')
     implementation files('libs/dashclock-api-r1.1.jar')
     implementation files('libs/prime-0.6.1.jar')
-    implementation files('libs/twitter4j-core-3.0.6-SNAPSHOT.jar')
-    implementation files('libs/twitter4j-media-support-3.0.6-SNAPSHOT.jar')
+    implementation 'org.twitter4j:twitter4j-core:4.0.6'
+    implementation 'org.twitter4j:twitter4j-media-support:4.0.6'
 }
